correcting the contrast and colors to meet the AA level

--- a/chamber/styles/chamber-base.css
+++ b/chamber/styles/chamber-base.css
@@ -92,6 +92,7 @@ header img {
 
 .navigation a:hover {
     background-color: var(--highlight-colors);
+    color: var(--text-light);
 }
 
 /*=================================buttons=========================*/
